api/src/db/snapshots/api__db__destinations__tests__destination_config_json_deserialization.snap
---
source: api/src/db/destinations.rs
expression: deserialized.unwrap()
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: Secret([REDACTED alloc::string::String]),
    max_staleness_mins: Some(
        42,
    ),
}
