api/src/db/snapshots/api__db__destinations__tests__destination_config_json_encryption-2.snap
---
source: api/src/db/destinations.rs
expression: deserialized_config
---
BigQuery {
    project_id: "project-id",
    dataset_id: "dataset-id",
    service_account_key: SerializableSecretString(
        "[REDACTED]",
    ),
    max_staleness_mins: Some(
        99,
    ),
}
